--- a/microorganisms.html
+++ b/microorganisms.html
@@ -779,6 +779,7 @@
       </ul>
     </div>
   </div>
+  <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="pazoff" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
   <script>
     // Tabbed interface functionality
     document.querySelectorAll('.tab').forEach(tab => {
